--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -521,7 +521,7 @@ The goal is then to be able to design descriptors that could help distinguish th
 
 As we saw in the previous chapter, many thermodynamic quantities can be calculated at infinite dilution --- the adsorption and exchange Gibbs free energies, enthalpies and entropies. If we consider xenon and krypton separation, we can generate 9 different descriptors. We will look at the relation between these quantities and the high-pressure selectivity values. In the introduction, we already tackled the relation between the exchange Gibss free energy, since it is the logarithmic transform of the infinite dilution selectivity plotted on Figure~\ref{fgr:grid_widom_selectivity_ambient}. This quantity is the most important descriptor as it sets an initial reference value to understand the problem. The selectivity at high pressure can be seen as the selectivity at infinite dilution plus or minus a shift due to the specificity of the adsorption at higher pressure in a given material.
 
-\todo{Figure of comparison plot}
+\todo{Figure of comparison plot (8 ready)}
 
 \subsubsection{High temperature quantities}
 
